Fixed main branch's name

--- a/.github/workflows/validate_pull_request.yml
+++ b/.github/workflows/validate_pull_request.yml
@@ -30,7 +30,7 @@ jobs:
 
     steps:
       - name: Checking out the shared_workflows repo to access the scripts
-        uses: actions/checkout@master
+        uses: actions/checkout@main
         with:
           repository: timehop/shared_workflows
 
