--- a/.github/workflows/notify_on_slack.yml
+++ b/.github/workflows/notify_on_slack.yml
@@ -17,11 +17,12 @@ jobs:
 
     steps:
       - name: Checking out the shared_workflows repo to access the scripts
-        uses: actions/checkout@main
+        uses: actions/checkout@v2
         with:
           repository: timehop/shared_workflows
+          path: shared_workflows
 
       - name: Sending message
         continue-on-error: true
         run: |
-          ruby scripts/notify_on_slack.rb ${{ inputs.message}} ${{ secrets.SLACK_WEBHOOK_CHANNEL }}
+          ruby shared_workflows/scripts/notify_on_slack.rb ${{ inputs.message}} ${{ secrets.SLACK_WEBHOOK_CHANNEL }}
